stryker/Metadata/unpackaged/objects/Students__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>RJY
ravula palem
tuni
annavaram
Gajuwaka
Nad
Rkbeach
Jagadamba
Kothabommali
Bobbii
Parvathipuram
Echapuram
sikkolu
tekkalai
palasa
Yeluru
Jangareddy gudem
Tdepalligudem
Benzecircle
krishna barage
durga temple
narsarao pet
chilakaloorpet
bradipet
marka[uram
donakonda
darsi
podili
nellore1
nellore3
nellore2
tirupathi
tiruthani
kuppam
pulivenndula
kadapacenter
kadapa2
hindupuram
anathapuram2
ananthapuram3
nandyal
palakoppuru
banagaanipalli
palakuru</description>
        <label>Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Districts__c</fullName>
        <description>east Godavari
West Godavari
Visakhapattanm
Vizayanagaram
Srikakulam
Krishna
Guntur
Ongole
Nellor
Kadapa
Kurnool
Anathapuram
Chittur</description>
        <label>Disricts</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>s_id__c</fullName>
        <displayFormat>S-{000}</displayFormat>
        <label>s_id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>s_id-{000}</displayFormat>
        <label>Student_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>